--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,7 @@
             <ul class="nav navbar-nav">
               <li class="active"><a href="#/">Home</a></li>
               <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
+              <li><a ng-href="#/datasets">Datasets</a></li>
             </ul>
           </div>
         </div>
@@ -86,6 +86,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/datasets.js"></script>
         <!-- endbuild -->
 </body>
 </html>
