--- a/app/index.html
+++ b/app/index.html
@@ -38,9 +38,8 @@
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
+              <li class="active"><a ng-href="#/datasets">Datasets</a></li>
               <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/datasets">Datasets</a></li>
             </ul>
           </div>
         </div>
@@ -84,7 +83,6 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/datasets.js"></script>
         <!-- endbuild -->
