--- a/app/index.html
+++ b/app/index.html
@@ -85,6 +85,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/datasets.js"></script>
+        <script src="scripts/controllers/resources.js"></script>
         <!-- endbuild -->
 </body>
 </html>
