Remove about section, and replace it with resources

--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,7 @@
 
             <ul class="nav navbar-nav">
               <li class="active"><a ng-href="#/datasets">Datasets</a></li>
-              <li><a ng-href="#/about">About</a></li>
+              <li><a ng-href="#/resources">Resources</a></li>
             </ul>
           </div>
         </div>
@@ -83,7 +83,6 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/datasets.js"></script>
         <script src="scripts/controllers/resources.js"></script>
         <!-- endbuild -->
