--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,7 @@
             <ul class="nav navbar-nav">
               <li class="active"><a ng-href="#/datasets">Datasets</a></li>
               <li><a ng-href="#/resources">Resources</a></li>
+              <li><a ng-href="#/organizations">Organizations</a></li>
             </ul>
           </div>
         </div>
