--- a/app/index.html
+++ b/app/index.html
@@ -87,6 +87,7 @@
         <script src="scripts/controllers/datasets.js"></script>
         <script src="scripts/controllers/resources.js"></script>
         <script src="scripts/controllers/organizations.js"></script>
+        <script src="scripts/controllers/groups.js"></script>
         <!-- endbuild -->
 </body>
 </html>
