--- a/app/index.html
+++ b/app/index.html
@@ -41,6 +41,7 @@
               <li class="active"><a ng-href="#/datasets">Datasets</a></li>
               <li><a ng-href="#/resources">Resources</a></li>
               <li><a ng-href="#/organizations">Organizations</a></li>
+              <li><a ng-href="#/groups">Groups</a></li>
             </ul>
           </div>
         </div>
