--- a/app/index.html
+++ b/app/index.html
@@ -90,6 +90,7 @@
         <script src="scripts/controllers/resources.js"></script>
         <script src="scripts/controllers/organizations.js"></script>
         <script src="scripts/controllers/groups.js"></script>
+        <script src="scripts/directives/search.js"></script>
         <!-- endbuild -->
 </body>
 </html>
