--- a/app/index.html
+++ b/app/index.html
@@ -88,6 +88,7 @@
         <script src="scripts/controllers/datasets.js"></script>
         <script src="scripts/controllers/resources.js"></script>
         <script src="scripts/controllers/organizations.js"></script>
+        <script src="scripts/controllers/organization.js"></script>
         <script src="scripts/controllers/groups.js"></script>
         <script src="scripts/directives/search.js"></script>
         <!-- endbuild -->
