--- a/app/index.html
+++ b/app/index.html
@@ -38,7 +38,7 @@
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a ng-href="#/datasets">Datasets</a></li>
+              <li class="active"><a ng-href="#/datasets">{{ 'DATASET' | translate}}</a></li>
               <li><a ng-href="#/resources">Resources</a></li>
               <li><a ng-href="#/organizations">Organizations</a></li>
               <li><a ng-href="#/groups">Groups</a></li>
@@ -80,6 +80,8 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/angular-translate/angular-translate.js"></script>
+    <script src="bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.js"</script>
     <script src="bower_components/underscore/underscore.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
@@ -91,6 +93,7 @@
         <script src="scripts/controllers/organizations.js"></script>
         <script src="scripts/controllers/groups.js"></script>
         <script src="scripts/directives/search.js"></script>
+        <script src="scripts/translate.js"></script>
         <!-- endbuild -->
 </body>
 </html>
