Agregar DGM footer

--- a/app/index.html
+++ b/app/index.html
@@ -45,11 +45,129 @@
       </div>
     </main>
 
-    <div class="footer">
-      <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+    <footer class="site-footer" role="contentinfo" aria-label="Pie de página del sitio">
+      <div class="main-container">
+        <div class="cols-12">
+          <div class="col col-3">
+            <div class="col-inner">
+              <div class="footer-section">
+                <ul class="open-knowledge-list" aria-label="Enlaces legales" role="navigation"> 
+                  <li class="footer-libre-">
+                    <a href="http://datos.gob.mx/libreusomx" title="Libre Uso MX">
+                      <i class="i libre-uso-white"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="http://opendefinition.org/" target="_blank">
+                      <img alt="Este material es de Conocimiento Abierto" src="http://assets.okfn.org/images/ok_buttons/ok_80x15_blue.png" style="margin-top: 5px;">
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://github.com/mxabierto/dgm" title="Repositorio GitHub" target="_blank">
+                      <img src="http://datos.gob.mx/assets/svg/icon-octocat.svg" alt="Github">
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col col-3">
+            <div class="col-inner">
+              <div class="footer-section">
+                <a href="http://catalogo.datos.gob.mx/dataset" class="footer-section-title">Datos</a>
+                <ul class="section-links-list">
+                  <li><a href="http://datos.gob.mx/acerca/">Acerca de</a></li>
+                  <li><a href="http://adela.datos.gob.mx/">ADELA</a></li>
+                  <li><a href="http://datos.gob.mx/guia">Guía de implementación</a></li>
+                  <li>
+                    <a class="page-link" href="http://datos.gob.mx/terminos-y-condiciones">Términos y condiciones</a>
+                  </li>
+                  <li>
+                    <a class="page-link" href="http://datos.gob.mx/privacidad">Aviso de Privacidad</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col col-2">
+            <div class="col-inner">
+              <div class="footer-section">
+                <a href="http://datos.gob.mx/historias/" class="footer-section-title">Historias</a>
+                <ul class="section-links-list">            
+                  <li>
+                    <a href="http://datos.gob.mx/historias/salud/" aria-hidden="true" tabindex="-1">Salud</a>  
+                  </li>
+                  <li>
+                    <a href="http://datos.gob.mx/historias/geografia/" aria-hidden="true" tabindex="-1">Geografia</a>  
+                  </li>
+                  <li>
+                    <a href="http://datos.gob.mx/historias/seguridad/" aria-hidden="true" tabindex="-1">Seguridad</a>  
+                  </li>
+                  <li>
+                    <a href="http://datos.gob.mx/historias/medio-ambiente/" aria-hidden="true" tabindex="-1">Ambiente</a>  
+                  </li>
+                  <li>
+                    <a href="http://datos.gob.mx/historias/educacion/" aria-hidden="true" tabindex="-1">Educación</a>  
+                  </li>
+                  <li>
+                    <a href="http://datos.gob.mx/historias/economia/" aria-hidden="true" tabindex="-1">Economia</a>  
+                  </li>
+                  <li>
+                    <a href="http://datos.gob.mx/historias/otras/" aria-hidden="true" tabindex="-1">Otras</a>  
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col col-2">
+            <div class="col-inner">
+              <div class="footer-section">
+                <a href="http://datos.gob.mx/apps/" class="footer-section-title">Apps</a>
+                <ul class="section-links-list">
+                  <li>
+                    <a href="http://datos.gob.mx/apps/movil/" aria-hidden="true" tabindex="-1">Movil</a>  
+                  </li>
+                  <li>
+                    <a href="http://datos.gob.mx/apps/web/" aria-hidden="true" tabindex="-1">Web</a>  
+                  </li>
+                </ul>
+              </div>
+              <div class="footer-section">
+                <a href="http://datos.gob.mx/herramientas/" class="footer-section-title">Herramientas</a>
+              </div>
+              <div class="footer-section">
+                <a href="http://foro.datos.gob.mx/" class="footer-section-title" target="_blank">Foro</a>
+              </div>
+            </div>
+          </div>
+          <div class="col col-2">
+            <div class="col-inner">
+              <div class="footer-section">
+                <a href="http://datos.gob.mx/avances/" class="footer-section-title">Avances</a>
+                <ul class="section-links-list">                    
+                  <li>
+                    <a href="http://datos.gob.mx/avances/eventos/" tabindex="-1">Eventos</a>  
+                  </li>
+                  <li>
+                    <a href="http://datos.gob.mx/avances/noticias/" tabindex="-1">Noticias</a>  
+                  </li>
+                  <li>
+                    <a href="http://datos.gob.mx/avances/politica/" tabindex="-1">Política</a>  
+                  </li>
+                  <li>
+                    <a href="http://datos.gob.mx/avances/consejo-consultivo/" tabindex="-1">Consejo Consultivo</a>  
+                  </li>
+                  <li>
+                    <a href="http://datos.gob.mx/avances/documentos/" tabindex="-1">Documentos</a>  
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
+    </footer>
+
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
