--- a/app/index.html
+++ b/app/index.html
@@ -90,6 +90,7 @@
         <script src="scripts/controllers/organizations.js"></script>
         <script src="scripts/controllers/organization.js"></script>
         <script src="scripts/controllers/groups.js"></script>
+        <script src="scripts/controllers/group.js"></script>
         <script src="scripts/directives/search.js"></script>
         <!-- endbuild -->
 </body>
