--- a/app/index.html
+++ b/app/index.html
@@ -56,27 +56,33 @@
       </header>
     </div>
 
-
-
-
     <main id="main-content" tabindex="-1" role="main" aria-label="Contenido principal">
       <div class="datasets">
         <section class="datasets-navbar">
           <div class="main-container">
             <div class="cols-12">
-              <div class="col col-2"></div>
-              <div class="col col-10">
-                <div class="col-inner">
-                  <div class="datasets-home">
-                    <a ng-href="#/datasets">Home</a>
-                  </div>
-                  <ul class="nav-list">
-                    <li class="active"><a ng-href="#/datasets">Datasets</a></li>
-                    <li><a ng-href="#/resources">Resources</a></li>
-                    <li><a ng-href="#/organizations">Organizations</a></li>
-                    <li><a ng-href="#/groups">Groups</a></li>
-                  </ul>
-                </div>
+              <div class="col-inner">
+                <ul class="datasets-breadcrumbs">
+                  <li>
+                    <a ng-href="#/datasets">
+                      <img src="http://datos.gob.mx/assets/svg/icon-home-green-small.svg" alt="Inicio" role="presentation">
+                    </a>
+                  </li>
+                  <li>
+                    <span class="divider">/ </span>
+                    <a ng-href="#/organizations">Organizations</a>
+                  </li>
+                  <li>
+                    <span class="divider">/ </span>
+                    <a ng-href="#/organizations/pemex">PEMEX</a>
+                  </li>
+                </ul>
+                <ul class="nav-list">
+                  <li class="active"><a ng-href="#/datasets">Datasets</a></li>
+                  <li><a ng-href="#/resources">Resources</a></li>
+                  <li><a ng-href="#/organizations">Organizations</a></li>
+                  <li><a ng-href="#/groups">Groups</a></li>
+                </ul>
               </div>
             </div>
           </div>
