--- a/app/index.html
+++ b/app/index.html
@@ -251,6 +251,7 @@
         <script src="scripts/controllers/group.js"></script>
         <script src="scripts/directives/search.js"></script>
         <script src="scripts/services/ckanservice.js"></script>
+        <script src="scripts/directives/govtypesmenu.js"></script>
         <!-- endbuild -->
 </body>
 </html>
