--- a/app/index.html
+++ b/app/index.html
@@ -252,6 +252,7 @@
         <script src="scripts/directives/search.js"></script>
         <script src="scripts/services/ckanservice.js"></script>
         <script src="scripts/directives/govtypesmenu.js"></script>
+        <script src="scripts/directives/datasetscategories.js"></script>
         <!-- endbuild -->
 </body>
 </html>
