Add Service to fetch datasets from a remote CKAN

--- a/app/index.html
+++ b/app/index.html
@@ -250,6 +250,7 @@
         <script src="scripts/controllers/groups.js"></script>
         <script src="scripts/controllers/group.js"></script>
         <script src="scripts/directives/search.js"></script>
+        <script src="scripts/services/ckanservice.js"></script>
         <!-- endbuild -->
 </body>
 </html>
