--- a/app/index.html
+++ b/app/index.html
@@ -255,6 +255,7 @@
         <script src="scripts/directives/govtypesmenu.js"></script>
         <script src="scripts/directives/datasetscategories.js"></script>
         <script src="scripts/directives/alphabetmenu.js"></script>
+        <script src="scripts/filters/formats.js"></script>
         <!-- endbuild -->
 </body>
 </html>
