--- a/app/index.html
+++ b/app/index.html
@@ -65,23 +65,23 @@
                 <div class="col-inner">
                   <ul class="datasets-breadcrumbs">
                     <li>
-                      <a ng-href="#/datasets">
+                      <a ng-href="#/conjuntos">
                         <img src="http://datos.gob.mx/assets/svg/icon-home-green-small.svg" alt="Inicio" role="presentation">
                       </a>
                     </li>
                     <li>
                       <span class="divider">/ </span>
-                      <a ng-href="#/organizations">Organizations</a>
+                      <a ng-href="#/instituciones">Instituciones</a>
                     </li>
                     <li>
                       <span class="divider">/ </span>
-                      <a ng-href="#/organizations/pemex">PEMEX</a>
+                      <a ng-href="#/instituciones/pemex">PEMEX</a>
                     </li>
                   </ul>
                   <ul class="nav-list">
-                    <li class="active"><a ng-href="#/datasets">Datasets</a></li>
-                    <li><a ng-href="#/organizations">Organizations</a></li>
-                    <li><a ng-href="#/groups">Groups</a></li>
+                    <li class="active"><a ng-href="#/conjuntos">Conjuntos de datos</a></li>
+                    <li><a ng-href="#/instituciones">Instituciones</a></li>
+                    <li><a ng-href="#/grupos">Grupos</a></li>
                   </ul>
                 </div>
               </div>
