Actualiza liga de catálogo de datos

--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
                 <div class="nav-burguer" aria-hidden="true"><span></span></div>
                 <ul class="site-navigation" aria-label="Navegación principal" role="navigation">
                   <li>
-                    <a class="page-link active" href="http://catalogo.datos.gob.mx/dataset" title="Ir al conjunto de datos" aria-label="Ir al catalogo de datos">Datos</a>
+                    <a class="page-link active" href="http://datos.gob.mx/catalogo" title="Ir al conjunto de datos" aria-label="Ir al catalogo de datos">Datos</a>
                   </li>
                   <li>
                     <a class="page-link" href="http://datos.gob.mx/historias/">Historias</a>
@@ -121,7 +121,7 @@
           <div class="col col-3">
             <div class="col-inner">
               <div class="footer-section">
-                <a href="http://catalogo.datos.gob.mx/dataset" class="footer-section-title">Datos</a>
+                <a href="http://datos.gob.mx/catalogo" class="footer-section-title">Datos</a>
                 <ul class="section-links-list">
                   <li><a href="http://datos.gob.mx/acerca/">Acerca de</a></li>
                   <li><a href="http://adela.datos.gob.mx/">ADELA</a></li>
