Add work-in-progress message on top of the page

--- a/app/index.html
+++ b/app/index.html
@@ -56,6 +56,12 @@
       </header>
     </div>
 
+    <div class="main-container" style="background-color:#fcf8e3; border-color:#faebcc; padding:10px">
+      <div class="cols-12">
+        <p style="color:#8a6d3b;">Estamos en proceso de rediseño del catálogo de datos, para visitar la versión anterior ve a catalogo.datos.gob.mx</p>
+      </div>
+    </div>
+
     <main id="main-content" tabindex="-1" role="main" aria-label="Contenido principal">
       <div class="datasets">
         <section class="datasets-navbar">
