Actualizar aviso de WIP

--- a/app/index.html
+++ b/app/index.html
@@ -58,7 +58,9 @@
 
     <div class="main-container" style="background-color:#fcf8e3; border-color:#faebcc; padding:10px">
       <div class="cols-12">
-        <p style="color:#8a6d3b;">Estamos en proceso de rediseño del catálogo de datos, para visitar la versión anterior ve a catalogo.datos.gob.mx</p>
+        <div class="col col-12">
+          <p style="color:#8a6d3b;">El catálogo de datos está en proceso de rediseño y publicación progresiva de nuevos conjuntos, para visitar la versión anterior ve a <a href="http://catalogo.datos.gob.mx/" title="catalogo.datos.gob.mx">catalogo.datos.gob.mx</a></p>
+        </div>
       </div>
     </div>
 
